fixed the hidden forgotten password link on mobile

--- a/client/src/pages/Login/Login.scss
+++ b/client/src/pages/Login/Login.scss
@@ -116,7 +116,6 @@
 
           @include xxsm {
             margin: 0;
-            display: none;
           }
         }
 
